@@ -24,3 +24,4 @@ docker
 ^GRTAGS
 ^GTAGS
 ^local
+vignettes/Makefile
